fixed dropdown menu header font size, fixed login sign in button and links overlapping

--- a/responsiv.css
+++ b/responsiv.css
@@ -185,7 +185,7 @@
         position: absolute;
         width: 292px;
         height: 49px;
-        top: 850px;
+        top: 805px;
         gap: 35px;
     }
 
