--- a/templates/rp-header-sidebar.css
+++ b/templates/rp-header-sidebar.css
@@ -8,21 +8,20 @@
 
     .header {
         height: 80px;
-        font-size: 47px;
+        font-size: 20px;
         font-weight: 700;
-        line-height: 56.2px;
         text-align: center;
         padding: 0;
     }
 
-    .header-join-logo{
+    .header-join-logo {
         width: 32px;
         height: 39.02px;
         gap: 10px;
         display: block !important;
-    }  
+    }
 
-    .help-button{
+    .help-button {
         display: none;
     }
 
@@ -67,7 +66,7 @@
         height: 80px;
         width: 428px;
         padding: 0;
-    } 
+    }
 
     .menu {
         display: flex;
@@ -97,5 +96,9 @@
 
     .font-size {
         font-size: 14px;
+    }
+
+    .dropdown-content a:not(#logout-link) {
+        padding: 8px 0px;
     }
 }
